--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <!-- Main css Style -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Normalize css -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <!-- font awesome library -->
+  <link rel="stylesheet" href="CSS/all.min.css">
+  <!-- font style -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,600;1,500&display=swap"
+    rel="stylesheet">
+  <!-- Page title -->
+  <title>Frontend Mentor | [testimonials-grid-section]</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Barlow+Semi+Condensed">
 
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
 </head>
 
 <body>
+
   <div class="container">
+    <!-- card no. one -->
     <div class="one">
       <div class="head">
         <img src="./images/image-daniel.jpg" alt="">
-        <i><svg width="104" height="102" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M104 102V59.727H84.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C95.01 25.86 98.909 22.257 104 19.375V0c-9.758 4.27-17.712 9.874-23.864 16.813-6.151 6.939-10.712 14.545-13.681 22.818C63.485 47.904 62 59.941 62 75.74V102h42zm-62 0V59.727H22.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C33.01 25.86 36.909 22.257 42 19.375V0c-9.652 4.27-17.58 9.874-23.784 16.813C12.01 23.752 7.424 31.358 4.455 39.631 1.485 47.904 0 59.941 0 75.74V102h42z"
-              fill="#A775F1" fill-rule="nonzero" />
-          </svg></i>
+        <img src="./images/bg-pattern-quotation.svg" alt="" class="q">
         <div>
-          <p class="name">Daniel Clifford</p>
+          <h3 class="name">Daniel Clifford</h3>
           <p class="grad">Verified Graduate</p>
         </div>
       </div>
@@ -46,12 +46,12 @@
         </q>
       </div>
     </div>
-
+    <!-- card no. two -->
     <div class="two">
       <div class="head">
         <img src="./images/image-jonathan.jpg" alt="">
         <div>
-          <p class="name">Jonathan Walters</p>
+          <h3 class="name">Jonathan Walters</h3>
           <p class="grad">verified Graduate </p>
         </div>
       </div>
@@ -65,12 +65,12 @@
     </div>
 
 
-
+    <!-- card no. three -->
     <div class="three">
       <div class="head">
         <img src="./images/image-jeanette.jpg" alt="">
         <div>
-          <p class="name">Jeanette Harmon</p>
+          <h3 class="name">Jeanette Harmon</h3>
           <p class="grad">Verified Graduate</p>
         </div>
       </div>
@@ -81,12 +81,12 @@
           while doing something I love. </q>
       </div>
     </div>
-
+    <!-- card no. four -->
     <div class="four">
       <div class="head">
         <img src="./images/image-patrick.jpg" alt="">
         <div>
-          <p class="name">Patrick Abrams</p>
+          <h3 class="name">Patrick Abrams</h3>
           <p class="grad">Verified Graduate</p>
         </div>
       </div>
@@ -101,11 +101,12 @@
         </q>
       </div>
     </div>
+    <!-- card no. five -->
     <div class="five">
       <div class="head">
         <img src="./images/image-kira.jpg" alt="">
         <div>
-          <p class="name">Kira Whittle</p>
+          <h3 class="name">Kira Whittle</h3>
           <p class="grad">Verified Graduate</p>
         </div>
       </div>
