--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Main css Style -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <!-- Normalize css -->
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="normalize.css">
   <!-- font awesome library -->
-  <link rel="stylesheet" href="CSS/all.min.css">
+  <link rel="stylesheet" href="all.min.css">
   <!-- font style -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
