--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- card no. one -->
     <div class="one">
       <div class="head">
-        <img src="./images/image-daniel.jpg" alt="">
+        <img src="./images/image-daniel.jpg" alt="Daniel">
         <img src="./images/bg-pattern-quotation.svg" alt="" class="q">
         <div>
           <h3 class="name">Daniel Clifford</h3>
@@ -49,7 +49,7 @@
     <!-- card no. two -->
     <div class="two">
       <div class="head">
-        <img src="./images/image-jonathan.jpg" alt="">
+        <img src="./images/image-jonathan.jpg" alt="jonathan">
         <div>
           <h3 class="name">Jonathan Walters</h3>
           <p class="grad">verified Graduate </p>
@@ -68,7 +68,7 @@
     <!-- card no. three -->
     <div class="three">
       <div class="head">
-        <img src="./images/image-jeanette.jpg" alt="">
+        <img src="./images/image-jeanette.jpg" alt="jeanette">
         <div>
           <h3 class="name">Jeanette Harmon</h3>
           <p class="grad">Verified Graduate</p>
@@ -84,7 +84,7 @@
     <!-- card no. four -->
     <div class="four">
       <div class="head">
-        <img src="./images/image-patrick.jpg" alt="">
+        <img src="./images/image-patrick.jpg" alt="patrick">
         <div>
           <h3 class="name">Patrick Abrams</h3>
           <p class="grad">Verified Graduate</p>
@@ -104,7 +104,7 @@
     <!-- card no. five -->
     <div class="five">
       <div class="head">
-        <img src="./images/image-kira.jpg" alt="">
+        <img src="./images/image-kira.jpg" alt="kira">
         <div>
           <h3 class="name">Kira Whittle</h3>
           <p class="grad">Verified Graduate</p>
